# khalas

./: .gitignore  README.md  demo.tape  pyproject.toml
docs/: index.html  kindle.html
khalas/: __init__.py  __main__.py  cli.py  config.py  display.py  optimizer.py  providers.py
